--- a/src/app/screens/events/list-screen/list-screen.component.scss
+++ b/src/app/screens/events/list-screen/list-screen.component.scss
@@ -194,3 +194,10 @@ body {
 
   &:disabled { opacity: .6; cursor: not-allowed; }
 }
+
+.no-events {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #ff5b5b;
+  padding: 2rem 0;
+}
