--- a/src/app/screens/admin/users-screen/users-screen.component.html
+++ b/src/app/screens/admin/users-screen/users-screen.component.html
@@ -3,7 +3,25 @@
   <div class="content-area">
         <main class="categories-container">
           <div class="user-management-container">
-            <h1>Gestión de Usuarios</h1>
+
+          <header class="header">
+            <h2>Gestión de Usuarios</h2>
+
+
+            <div class="dropdown">
+              <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                Crear Usuario
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <li><a class="dropdown-item" href="registro-logeado1" >Crear Alumno</a></li>
+                <li><a class="dropdown-item" href="registro-logeado">Crear Colaborador</a></li>
+                </ul>
+            </div>
+
+
+
+          </header>
+
 
             <div class="stats-cards">
               <div class="stat-card">
