--- a/src/app/screens/events/eventos-admin/eventos-admin.component.html
+++ b/src/app/screens/events/eventos-admin/eventos-admin.component.html
@@ -1,26 +1,13 @@
 <div class="app-layout">
-<<<<<<< HEAD
-      <app-sidebar></app-sidebar>
-      <div class="content-area">
-        <main class="categories-container">
-          <div class="event-management-container">
-        <header class="header">
-          <h2>Gestión de Eventos</h2>
-          <button class="create-btn" (click)="crearEvento()">
-            <i class="fas fa-plus"></i> Crear Evento
-          </button>
-        </header>
-=======
   <app-sidebar></app-sidebar>
   <div class="content-area">
     <main class="categories-container">
       <div class="event-management-container">
         <header class="header">
           <h2>Gestión de Eventos</h2>
-          <button type="button" class="create-btn" routerLink="/register-log">
+          <button type="button" class="create-btn" routerLink="/register-logeado-evento">
             <i class="fas fa-plus"></i> Crear Evento
           </button>
->>>>>>> 8dc8bd62309eb27ac6af83a20af63eb59360a030
 
         </header>
 
