--- a/src/app/partials/registro-evento/registro-evento.component.scss
+++ b/src/app/partials/registro-evento/registro-evento.component.scss
@@ -195,7 +195,8 @@ mat-form-field {
     color: #ff5b5b;
     font-family: "Roboto", sans-serif;
     text-align: left;
-    padding-left: 0rem;   // Desktop / pantallas grandes
+    padding-left: 0rem;
+    padding-bottom: 1rem;   // Desktop / pantallas grandes
 }
 
 /* ============================
