--- a/src/app/screens/admin/users-screen/users-screen.component.html
+++ b/src/app/screens/admin/users-screen/users-screen.component.html
@@ -13,8 +13,8 @@
                 Crear Usuario
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a class="dropdown-item" href="registro-logeado1" >Crear Alumno</a></li>
-                <li><a class="dropdown-item" href="registro-logeado">Crear Colaborador</a></li>
+                <li><a class="dropdown-item" href="register-logeado-estudiante" >Crear Alumno</a></li>
+                <li><a class="dropdown-item" href="register-logeado-organizador">Crear Organizador</a></li>
                 </ul>
             </div>
 
