--- a/src/app/modals/event-publish-modal/event-publish-modal.component.html
+++ b/src/app/modals/event-publish-modal/event-publish-modal.component.html
@@ -1,1 +1,19 @@
-<p>event-publish-modal works!</p>
+<div class="wrapper">
+  <div class="icon-close">
+      <button class="btn" (click)="cerrar_modal()">
+          <i class="bi bi-x-lg"></i>
+      </button>
+  </div>
+  <div class="body-modal">
+      <h1 class="title-modal">Publicar evento</h1>
+      <span class="descripcion">¿Está seguro de que deseas publicar este evento?</span>
+      <div class="buttons-modal">
+          <button mat-button class="btn-regresar" (click)="cerrar_modal()">
+              Cancelar
+          </button>
+          <button mat-button class="btn-eliminar" (click)="publicarEvento()">
+              Publicar
+          </button>
+      </div>
+  </div>
+</div>
