--- a/src/app/modals/role-change-modal/role-change-modal.component.html
+++ b/src/app/modals/role-change-modal/role-change-modal.component.html
@@ -1,1 +1,19 @@
-<p>role-change-modal works!</p>
+<div class="wrapper">
+  <div class="icon-close">
+      <button class="btn" (click)="cerrar_modal()">
+          <i class="bi bi-x-lg"></i>
+      </button>
+  </div>
+  <div class="body-modal">
+      <h1 class="title-modal">Cambiar de Rol</h1>
+      <span class="descripcion">¿Está seguro de que deseas cambiar el rol?</span>
+      <div class="buttons-modal">
+          <button mat-button class="btn-regresar" (click)="cerrar_modal()">
+              Cancelar
+          </button>
+          <button mat-button class="btn-eliminar" (click)="cambiarRol()">
+              Cambiar
+          </button>
+      </div>
+  </div>
+</div>
