--- a/src/app/screens/dashboard-screen/dashboard-screen.component.html
+++ b/src/app/screens/dashboard-screen/dashboard-screen.component.html
@@ -3,7 +3,7 @@
   <div class="content-area">
     <main class="categories-container">
       <div class="dashboard-container">
-        <h2 class="dashboard-title">Dashboard Administrador</h2>
+        <h2 class="dashboard-title">Dashboard {{rol}}</h2>
 
         <div class="metrics-grid">
           <div class="metric-card">
